# pycrc32

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: usage.py
pycrc32/: __init__.py
pycrc32/tests/: test_crc32.py
scripts/: bench.py
src/: lib.rs
